--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -117,7 +117,7 @@
 
 <h2 id="criando-uma-transação-simples">Criando uma transação simples</h2>
 
-<p>Para criar uma transação que utilizará cartão de crédito, é necessário enviar uma requisição utilizando o método <code class="highlighter-rouge">POST</code> para o recurso Payment, conforme o exemplo. Esse exemplo contempla o mínimo de campos necessários a serem enviados para a autorização.</p>
+<p><em>Para</em> criar uma transação que utilizará cartão de crédito, é necessário enviar uma requisição utilizando o método <code class="highlighter-rouge">POST</code> para o recurso Payment, conforme o exemplo. Esse exemplo contempla o mínimo de campos necessários a serem enviados para a autorização.</p>
 
 <h3 id="requisição">Requisição</h3>
 
