--- a/en/manual/api-cielo-ecommerce.html
+++ b/en/manual/api-cielo-ecommerce.html
@@ -13173,5 +13173,15 @@ Just contact Cielo HelpDesk and inform the notification URL to be used.</p>
     <script src="/en/assets/js/lunr.js"></script>
     <script src="/en/assets/js/search.js"></script>
     
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:674586,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </body>
 </html>
