--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -640,5 +640,15 @@ Caso um chargeback seja realizado, a Cielo não se responsabiliza por reembolsar
     <script src="/assets/js/lunr.js"></script>
     <script src="/assets/js/search.js"></script>
     
+  <script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:674586,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   </body>
 </html>
