--- a/manual/teste-de-integração.html
+++ b/manual/teste-de-integração.html
@@ -132,9 +132,9 @@
 
 <aside class="request">Teste de POST<span class="method POST">
 
-<aside class="notice">
+<aside class="notice">Valor do *NOTICE*</aside>
 
-<aside class="warning">
+<aside class="warning">Valor do *Warning*</aside>
 
 ## Nivel 2
 
@@ -279,7 +279,7 @@ Conteudo Tipo *D*
 
 
 
-</aside></aside></span></aside></span></aside></span></aside>
+</span></aside></span></aside></span></aside>
 
 </div>
 
