--- a/manual/teste-de-integração.html
+++ b/manual/teste-de-integração.html
@@ -195,11 +195,11 @@
   </thead>
   <tbody>
     <tr>
-      <td><code class="highlighter-rouge">Nome</code></td>
+      <td><code class="highlighter-rouge">Name.company</code></td>
       <td>Nome do produto</td>
     </tr>
     <tr>
-      <td><code class="highlighter-rouge">preço</code></td>
+      <td><code class="highlighter-rouge">price.company</code></td>
       <td>Preço do Produto</td>
     </tr>
   </tbody>
