--- a/manual/teste-de-integração.html
+++ b/manual/teste-de-integração.html
@@ -186,6 +186,8 @@
 
 <p>Teste de Cor das tabelas: <em>Cabeçalho</em> e <em>fundo</em></p>
 
+<p>Detaque de Código: <code class="highlighter-rouge">Name.Company</code></p>
+
 <table>
   <thead>
     <tr>
