--- a/manual/teste-de-integração.html
+++ b/manual/teste-de-integração.html
@@ -233,8 +233,12 @@
 
 <h3 id="alertas">Alertas</h3>
 
-<aside class="warning">Aviso de Alerta<aside>
 <aside class="notice"><strong>Atenção:</strong> Aviso de algo importante.</aside>
+
+<aside class="warning">Aviso de Alerta<aside>
+
+&gt; **ATENÇÃO** - Teste de Alerta
+
 </aside></aside>
 
 </div>
