--- a/manual/teste-de-integração.html
+++ b/manual/teste-de-integração.html
@@ -241,6 +241,11 @@
 
 &gt; **ATENÇÃO** - Teste de Alerta
 
+&gt; **ATENÇÃO** - Teste de Alerta
+
+&gt; **ATENÇÃO** - Teste de Alerta
+
+&gt; **ATENÇÃO** - Teste de Alerta
 </aside></aside>
 
 </div>
