--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -452,7 +452,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p>Normalmente, o browser faz a atualização do Certificado automaticamente, caso não o faça e o cliente entre em contato deverá ser informado os seguintes passos:</p>
 
-<h4 id="1o-passo">1o Passo:</h4>
+<p><strong>1º Passo</strong></p>
 
 <p>Salvar os três arquivos abaixo em uma pasta nova, ou que relembre facilmente, pois será utilizada posteriormente:</p>
 
@@ -462,7 +462,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
   <li><a href="./attachment/ecommerce.cielo.com.br.crt">Certificado E-Commerce Cielo</a></li>
 </ul>
 
-<h4 id="2o-passo">2o Passo:</h4>
+<p><strong>2º Passo</strong></p>
 
 <p>No “Internet Explorer”, clique no menu “Ferramentas” e acesse as “Opções da Internet”:</p>
 
@@ -476,7 +476,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p><img src="/images/certificado-instalar-gc-1.jpg" alt="Instalar GC" /></p>
 
-<h4 id="3o-passo">3o Passo:</h4>
+<p><strong>3º Passo</strong></p>
 
 <p>No Internet Explorer, em “Certificados”, clique em “Importar”.</p>
 
@@ -490,7 +490,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p><img src="/images/certificado-instalar-gc-2.jpg" alt="Instalar GC" /></p>
 
-<h4 id="4o-passo">4o Passo:</h4>
+<p><strong>4º Passo</strong></p>
 
 <p>No Internet Explorer e Chrome “Assistente para Importação de Certificados”, clique em “Avançar”.</p>
 
@@ -502,7 +502,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p><img src="/images/certificado-instalar-ff-3.jpg" alt="Instalar FF" /></p>
 
-<h4 id="5o-passo">5o Passo:</h4>
+<p><strong>5º Passo</strong></p>
 
 <p>No Chrome e Internet Explorer “Assistente para Importação de Certificados”, clique em “Procurar”, procure a pasta onde estão os arquivos e selecione o arquivo “cieloecommerce.cielo.com.br.crt, clique em “Abrir” e em seguida “Avançar”.</p>
 
@@ -510,19 +510,19 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p><img src="/images/certificado-instalar-ie-gc-6.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="6o-passo">6o Passo:</h4>
+<p><strong>6º Passo</strong></p>
 
 <p>Selecionar a opção desejada: adicionar o Certificado em uma pasta padrão ou procurar a pasta de sua escolha.</p>
 
 <p><img src="/images/certificado-instalar-ie-gc-7.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="7o-passo">7o Passo:</h4>
+<p><strong>7º Passo</strong></p>
 
 <p>Clique em “Concluir”.</p>
 
 <p><img src="/images/certificado-instalar-ie-gc-8.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="8o-passo">8o Passo:</h4>
+<p><strong>8º Passo</strong></p>
 
 <p>Clique em “Ok” para concluir a importação.</p>
 
@@ -534,7 +534,7 @@ Abaixo listamos pontos que devem estar prontos antes da integração:</p>
 
 <p><img src="/images/certificado-instalar-ie-gc-10.jpg" alt="Instalar IE e GC" /></p>
 
-<h4 id="9o-passo">9o Passo:</h4>
+<p><strong>9º Passo</strong></p>
 
 <p>Repita o mesmo procedimento para os 3 arquivos enviados.</p>
 
