--- a/faq/checkout-faq.html
+++ b/faq/checkout-faq.html
@@ -277,7 +277,7 @@
     <div class="sidebar">
   <div class="sidebar-sticky">
     <div class="sidebar-about">
-      <a title="Esconder a coluna da esquerda" class="hamburger">
+      <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
       <a href="/">
