--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -532,7 +532,7 @@ Caso um chargeback seja realizado, a Cielo não se responsabiliza por reembolsar
     <div class="sidebar">
   <div class="sidebar-sticky">
     <div class="sidebar-about">
-      <a title="Esconder a coluna da esquerda" class="hamburger">
+      <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
       <a href="/">
