--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -338,7 +338,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
     <div class="sidebar">
   <div class="sidebar-sticky">
     <div class="sidebar-about">
-      <a title="Esconder a coluna da esquerda" class="hamburger">
+      <a title="Comutar a coluna da esquerda" class="hamburger">
         <i class="fa fa-bars hamb-menu" aria-hidden="true"></i>
       </a>
       <a href="/">
