--- a/404.html
+++ b/404.html
@@ -108,6 +108,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-contact">
       <div class="contact">
@@ -123,6 +124,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
