--- a/en/manual/api-cielo-ecommerce.html
+++ b/en/manual/api-cielo-ecommerce.html
@@ -13087,6 +13087,7 @@ Just contact Cielo HelpDesk and inform the notification URL to be used.</p>
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Complementary materials</h2>
@@ -13115,6 +13116,7 @@ Just contact Cielo HelpDesk and inform the notification URL to be used.</p>
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
