--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -3143,6 +3143,7 @@ It’s possible to select one or more options of shipping. They are presented to
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Complementary materials</h2>
@@ -3171,6 +3172,7 @@ It’s possible to select one or more options of shipping. They are presented to
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
