--- a/en/manual/webservice-1-5.html
+++ b/en/manual/webservice-1-5.html
@@ -3450,6 +3450,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Complementary materials</h2>
@@ -3478,6 +3479,7 @@ mensagem=&lt;?xml version="1.0" encoding="ISO-8859-1"?&gt;&lt;requisicao-captura
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
