--- a/faq/checkout-faq.html
+++ b/faq/checkout-faq.html
@@ -288,6 +288,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -314,6 +315,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
