--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -543,6 +543,7 @@ Caso um chargeback seja realizado, a Cielo não se responsabiliza por reembolsar
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -569,6 +570,7 @@ Caso um chargeback seja realizado, a Cielo não se responsabiliza por reembolsar
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
