--- a/manual/braspag-cartao-protegido.html
+++ b/manual/braspag-cartao-protegido.html
@@ -1010,6 +1010,7 @@ deve ser abortado e o erro analisado e tratado.</p>
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -1038,6 +1039,7 @@ deve ser abortado e o erro analisado e tratado.</p>
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
