--- a/manual/braspag-pagador.html
+++ b/manual/braspag-pagador.html
@@ -14506,6 +14506,7 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -14534,6 +14535,7 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
