--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -3222,6 +3222,7 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -3250,6 +3251,7 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
