--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14091,6 +14091,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -14119,6 +14120,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
