--- a/manual/manual-teste-de-integração.html
+++ b/manual/manual-teste-de-integração.html
@@ -234,6 +234,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-contact">
       <div class="contact">
@@ -249,6 +250,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
