--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -3524,6 +3524,7 @@ seguintes informações, que irão completar o cadastro:
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -3552,6 +3553,7 @@ seguintes informações, que irão completar o cadastro:
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
