--- a/tutorial/backoffice-3-0.html
+++ b/tutorial/backoffice-3-0.html
@@ -319,6 +319,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -345,6 +346,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
