--- a/tutorial/fluxo-checkout.html
+++ b/tutorial/fluxo-checkout.html
@@ -460,6 +460,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -486,6 +487,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
