--- a/tutorial/postman.html
+++ b/tutorial/postman.html
@@ -349,6 +349,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -375,6 +376,7 @@ No <strong>Checkout Cielo</strong> não há <code class="highlighter-rouge">Merc
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
