--- a/manual/braspag-pos-virtual.html
+++ b/manual/braspag-pos-virtual.html
@@ -730,6 +730,7 @@ diferentes.</p>
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -758,6 +759,7 @@ diferentes.</p>
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
