--- a/tutorial/casos-de-uso-teste-de-integração.html
+++ b/tutorial/casos-de-uso-teste-de-integração.html
@@ -214,6 +214,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-contact">
       <div class="contact">
@@ -229,6 +230,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
