--- a/tutorial/habilitacao-meios-de-pagamento.html
+++ b/tutorial/habilitacao-meios-de-pagamento.html
@@ -371,6 +371,7 @@
 
     <div id="toc"></div>
 
+    <div class="fixed-footer">
     
     <div class="toc-footer">
       <h2 class="no-toc toc-footer-title">Materiais complementares</h2>
@@ -399,6 +400,7 @@
         </a>
       </div>
     </div>
+  </div>
   </div>
 </div>
 
