--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="/manual/checkout-cielo">Manual Checkout Cielo</a>
+                    <a href="/manual/checkout-cielo">Manual de integração</a>
                 </li>
             
                 <li class="doc-title">
