--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="/faq/checkout-faq">FAQ Checkout Cielo</a>
+                    <a href="/faq/checkout-faq">FAQ</a>
                 </li>
             
                 <li class="doc-title">
