--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="/faq/checkout-tutoriais">FAQ</a>
+                    <a href="/tutorial/checkout-tutoriais">Tutoriais</a>
                 </li>
             
             </ul>
