--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="/faq/faq-teste-de-integra%C3%A7%C3%A3o">FAQ</a>
+                    <a href="/faq/faq-teste-de-integra%C3%A7%C3%A3o">FAQ Teste</a>
                 </li>
             
                 <li class="doc-title">
