--- a/en/manual/api-cielo-ecommerce.html
+++ b/en/manual/api-cielo-ecommerce.html
@@ -13137,7 +13137,10 @@ Just contact Cielo HelpDesk and inform the notification URL to be used.</p>
                 selectors: "h1,h2,h3,h4,h5,h6",
                 
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
