--- a/manual/checkout-cielo.html
+++ b/manual/checkout-cielo.html
@@ -3274,7 +3274,10 @@ Se no contrato técnico existir o nó da recorrência, fica obrigatório o tipo 
                 selectors: "h1,h2,h3,h4,h5,h6",
                 
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
