--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14141,7 +14141,10 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
                 selectors: "h1,h2,h3,h4,h5,h6",
                 
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
