--- a/en/manual/checkout-cielo.html
+++ b/en/manual/checkout-cielo.html
@@ -3183,7 +3183,10 @@ It’s possible to select one or more options of shipping. They are presented to
                 selectors: "h1,h2,h3,h4,h5,h6",
                 
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
