--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -592,7 +592,10 @@ Caso um chargeback seja realizado, a Cielo não se responsabiliza por reembolsar
                 selectors: "h1",
                 
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
