--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -3576,7 +3576,10 @@ seguintes informações, que irão completar o cadastro:
                 selectors: "h1,h2,h3,h4,h5,h6",
                 
                 hashGenerator: "pretty",
-                ignoreSelector: ".no-toc"
+                ignoreSelector: ".no-toc",
+                scrollTo: 100,
+                smoothScroll: false,
+                showEffect: "none"
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
