--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="/tutorial/boas-praticas-de-e-commerce">Tutorial Boleto e Débito Online</a>
+                    <a href="/tutorial/boas-praticas-de-e-commerce">Boas Práticas eCommerce</a>
                 </li>
             
                 <li class="doc-title">
