--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="/tutorial/postman-copy">Postman Cielo</a>
+                    <a href="/tutorial/c%C3%B3digos-cielo">Postman Cielo</a>
                 </li>
             
                 <li class="doc-title">
