--- a/en/manual/api-cielo-ecommerce.html
+++ b/en/manual/api-cielo-ecommerce.html
@@ -13194,6 +13194,7 @@ Just contact Cielo HelpDesk and inform the notification URL to be used.</p>
         $('.expand-btn').click(function() {
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
+            $(this).children('i.fa').toggleClass('fa-compress');
         });
 
         
