--- a/manual/braspag-pagador.html
+++ b/manual/braspag-pagador.html
@@ -14615,6 +14615,7 @@ id=‹merchant id›‹session ID›" type="text/javascript"›
         $('.expand-btn').click(function() {
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
+            $(this).children('i.fa').toggleClass('fa-compress');
         });
 
         
