--- a/manual/braspag-pos-virtual.html
+++ b/manual/braspag-pos-virtual.html
@@ -839,6 +839,7 @@ diferentes.</p>
         $('.expand-btn').click(function() {
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
+            $(this).children('i.fa').toggleClass('fa-compress');
         });
 
         
