--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -14046,6 +14046,7 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
         $('.expand-btn').click(function() {
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
+            $(this).children('i.fa').toggleClass('fa-compress');
         });
 
         
