--- a/manual/webservice-1-5.html
+++ b/manual/webservice-1-5.html
@@ -3633,6 +3633,7 @@ seguintes informações, que irão completar o cadastro:
         $('.expand-btn').click(function() {
             $('.overlay').toggleClass('opened');
             $(this).parent().parent().parent().toggleClass('opened');
+            $(this).children('i.fa').toggleClass('fa-compress');
         });
 
         
