--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="/tutorial/habilitacao-meios-de-pagamento">Contratando Boletos e Débito Online</a>
+                    <a href="/tutorial/habilitacao-meios-de-pagamento">Configurando Boletos e Débito Online</a>
                 </li>
             
                 <li class="doc-title">
