--- a/tutorial/habilitacao-meios-de-pagamento.html
+++ b/tutorial/habilitacao-meios-de-pagamento.html
@@ -270,7 +270,7 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
   </li>
 </ol>
 
-<aside class="notice">Validade do Boleto – Caso o boleto expire em um dia não útil, como sábado, ele será válido até o próximo dia útil</aside>
+<aside class="notice">**Validade do Boleto** – Caso o boleto expire em um dia não útil, como sábado, ele será válido até o próximo dia útil</aside>
 
 <h1 id="débito-online">Débito online</h1>
 
