--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -447,7 +447,146 @@
 
 <h1 id="tutorial-meios-de-pagamento">Tutorial Meios de Pagamento</h1>
 
-<p>Nesta seção são explicados os meios de pagamento utilizados pelo Checkout Cielo, assim como esses funcionam e a maneira como esses são controlados no backoffice.</p>
+<p>Nesta seção são explicados os meios de pagamento utilizados pelo Checkout Cielo.
+Versão atual do Checkout Cielo possui suporte aos seguintes meios de pagamento:</p>
+
+<p><strong>Cartão de Crédito</strong></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Bandeira</th>
+      <th>Crédito à vista</th>
+      <th>Crédito parcelado Loja</th>
+      <th>Débito</th>
+      <th>Voucher</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Visa</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>MasterCard</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>American Express</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>Elo</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>Diners Club</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>Discover</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>JCB</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+    <tr>
+      <td>Aura</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td>Não</td>
+      <td>Não</td>
+    </tr>
+  </tbody>
+</table>
+
+<p><strong>OBS</strong>: Limite maximo de parcelas do Checkout Cielo é 12X.</p>
+
+<p><strong>Cartão de Débito</strong></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Bandeira</th>
+      <th>Banco</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Visa</td>
+      <td>Bradesco<br />Banco do Brasil<br />HSBC<br />Santander<br />Itaú<br />BRB<br />Safra<br />Banco da Amazônia<br />Sicredi<br />Banco do Espirito Santo<br />Banco do Nordeste<br />Mercantil<br /></td>
+    </tr>
+    <tr>
+      <td>Mastercard</td>
+      <td>Banco do Brasil<br />Santander<br />Itaú<br />BRB<br />Sicredi<br />Bancoob<br />CitiBank<br /></td>
+    </tr>
+  </tbody>
+</table>
+
+<p><strong>Boleto</strong></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Banco</th>
+      <th>Tipo</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Bradesco</td>
+      <td>Não registrado</td>
+    </tr>
+    <tr>
+      <td>Bradesco</td>
+      <td>Registrado SPS</td>
+    </tr>
+    <tr>
+      <td>Banco do Brasil</td>
+      <td>Não registrado</td>
+    </tr>
+  </tbody>
+</table>
+
+<p><strong>Débito Online</strong></p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Banco</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Bradesco</td>
+    </tr>
+    <tr>
+      <td>Banco do Brasil</td>
+    </tr>
+  </tbody>
+</table>
 
 <h2 id="boleto">Boleto</h2>
 
