--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -106,7 +106,7 @@
 
 <p>Em seguida é necessário incluir sua Senha:</p>
 
-<p><img src="/Public/images/bkocheckout/checkout-login-senha.png" alt="Senha Backoffice Cielo" /></p>
+<p><img src="/images/checkout-login-senha.png" alt="Senha Backoffice Cielo" /></p>
 
 <p>Na área de “Vendas Online” basta clicar em Checkout Cielo.</p>
 
@@ -120,22 +120,40 @@
 
 <p>O Backoffice é formado por 6 paginas diferentes de administração do Checkout Cielo. Elas são:</p>
 
-<ol>
-  <li><a href="#dashboard">DashBoard</a> - Pagina inicial onde são apresentadas informações sobre a sua conta e sobre o volume e tipo de transações que sua loja vem realizando via o Checkout Cielo.</li>
-  <li><a href="#pedidos">Pedidos</a> - Nessa pagina fica contida toda a listagem de transações realizadas por um determinado periodo de tempo no Checkout Cielo. Nessa pagina é possivel pesquisar um determinado pedido , via a colocação de um determinado parametro de busca nos campos la existentes ou desmarcando os “checkbox” dos <strong>“Meios de pagamento”</strong> ou <strong>“Status de pagamento”</strong> e apertando o botão <strong>“Buscar”</strong>.</li>
-  <li><a href="#produtos">Produtos</a> - Nessa pagina são listados todos os produtos cadastrados no Checkout Cielo. Tambem é possivel fazer uma busca pelo nome do produto nesta pagina.  A lista de produtos pode ser exportada no formato Excel.</li>
-  <li><a href="#relatórios">Relatórios</a> - Nesta pagina é possível gerar 05 tipos de relatórios:
-    <ul>
-      <li>“Relatório financeiro”,</li>
-      <li>“Detalhado de vendas”,</li>
-      <li>“Listagem de clientes”,</li>
-      <li>“Extrato de Cobrança” e</li>
-      <li>“Relatório de Recorrência”.</li>
-    </ul>
-  </li>
-  <li><a href="#maniais">Manuais</a> - Nesta página constam os manuais do Checkout Cielo, assim como a pagina de FAQ e de “Duvidas”, onde o lojista pode entrar em contato com a equipe de suporte Checkout Cielo.</li>
-  <li><a href="#configurações">Configurações</a> - Pagina onde é possivel fazer alterações nas configurações da Loja , dos seus dados cadastrais e Alterar sua Senha.</li>
-</ol>
+<table>
+  <thead>
+    <tr>
+      <th>Aba</th>
+      <th>Descrição</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>DashBoard</strong></td>
+      <td>Pagina inicial onde são apresentadas informações sobre a sua conta e sobre o volume e tipo de transações que sua loja vem realizando via o Checkout Cielo.</td>
+    </tr>
+    <tr>
+      <td><strong>Pedidos</strong></td>
+      <td>Nessa pagina fica contida toda a listagem de transações realizadas por um determinado periodo de tempo no Checkout Cielo. Nessa pagina é possivel pesquisar um determinado pedido , via a colocação de um determinado parametro de busca nos campos la existentes ou desmarcando os “checkbox” dos <strong>“Meios de pagamento”</strong> ou <strong>“Status de pagamento”</strong> e apertando o botão <strong>“Buscar”</strong>.</td>
+    </tr>
+    <tr>
+      <td><em>Produtos</em></td>
+      <td>Nessa pagina são listados todos os produtos cadastrados no Checkout Cielo. Tambem é possivel fazer uma busca pelo nome do produto nesta pagina.  A lista de produtos pode ser exportada no formato Excel.</td>
+    </tr>
+    <tr>
+      <td><strong>Relatórios</strong></td>
+      <td>Nesta pagina é possível gerar 05 tipos de relatórios: <br /> “Relatório financeiro”<br />“Detalhado de vendas”<br />“Listagem de clientes”<br />* “Extrato de Cobrança”<br />“Relatório de Recorrência”<br /></td>
+    </tr>
+    <tr>
+      <td><strong>Manuais</strong></td>
+      <td>Nesta página constam os manuais do Checkout Cielo, assim como a pagina de FAQ e de “Duvidas”, onde o lojista pode entrar em contato com a equipe de suporte Checkout Cielo.</td>
+    </tr>
+    <tr>
+      <td><strong>Configurações</strong></td>
+      <td>Pagina onde é possivel fazer alterações nas configurações da Loja , dos seus dados cadastrais e Alterar sua Senha.</td>
+    </tr>
+  </tbody>
+</table>
 
 <h2 id="aba-dashboard">Aba DashBoard</h2>
 
